[package]
name = "check_online"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
tabled = "0.15"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
figlet-rs = "0.1.5"
ansi_term = "0.12"
crossterm = "0.27"
lazy_static = "1.4"
ratatui = "0.26"
sysinfo = "0.30"
ping-rs = "0.1"
